Bug 324635 Firefox 1.5 PostScript printing will not work (no output) Patch by leon.sha@sun.com kherron+mozilla: review+ roc: superreview+